# MosaicGenerator

./: CMakeLists.txt  README.md  coloring.cpp  main.cpp
